Theme color will be shown correctly

--- a/views/global.ejs
+++ b/views/global.ejs
@@ -1,5 +1,5 @@
 <meta charset="utf-8"></meta>
-<meta name="theme-color" value="#4CAF50"></meta>
+<meta name="theme-color" content="#4CAF50"></meta>
 <meta name="viewport" content="width=device-width, user-scalable=no">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
